--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ docopt==0.6.2
 docutils==0.14
 et-xmlfile==1.0.1
 gunicorn==19.7.1
+html5lib==1.0.1
 jdcal==1.3
 jmespath==0.9.3
 jsonschema==2.6.0
@@ -36,6 +37,7 @@ psycopg2==2.7.4
 psycopg2-binary==2.7.4
 pycodestyle==2.3.1
 python-dateutil==2.6.1
+python-dotenv==0.10.3
 pytz==2017.3
 PyYAML==3.12
 requests==2.9.1
@@ -48,5 +50,6 @@ termcolor==1.1.0
 texttable==0.9.1
 urllib3==1.22
 wcwidth==0.1.7
+webencodings==0.5.1
 websocket-client==0.46.0
 yapf==0.20.1
