--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ boto3==1.5.30
 botocore==1.12.39
 cached-property==1.5.1
 cement==2.8.2
+chromedriver==2.24.1
 colorama==0.3.9
 Django==1.11.10
 django-admin-list-filter-dropdown==1.0.2
