--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,8 @@ boto3==1.5.30
 botocore==1.12.39
 cached-property==1.5.1
 cement==2.8.2
-chromedriver==2.24.1
 colorama==0.3.9
+chromedriver-install==1.0.3
 configparser==4.0.2
 crayons==0.3.0
 Django==1.11.10
