--- a/requirements_0423.txt
+++ b/requirements_0423.txt
@@ -1,10 +1,9 @@
-awsebcli
-boto3
-cached-property==1.5.1
-Django==1.11.11
+awsebcli==3.14.6
+botocore==1.12.39
+Django==1.11.17
 django-admin-list-filter-dropdown
-django-cors-headers
-django-filter
+django-cors-headers==2.1.0
+django-filter==1.1.0
 django-jet==1.0.7
 django-material==1.2.2
 django-pipeline==1.6.14
@@ -16,5 +15,5 @@ gunicorn==19.7.1
 Pillow
 psycopg2
 psycopg2-binary
-requests<2.21
+requests
 selenium==3.10.0
