--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,11 @@
-attrs==19.3.0
 awsebcli==3.14.6
-bcrypt==3.1.7
 blessed==1.17.8
-boto3==1.5.30
-botocore==1.8.44
+botocore==1.12.39
 cached-property==1.5.1
 cement==2.8.2
 certifi==2020.4.5.2
-cffi==1.14.0
 chardet==3.0.4
-colorama==0.4.3
-cryptography==2.9.2
+colorama==0.3.9
 Django==1.11.17
 django-admin-list-filter-dropdown==1.0.3
 django-cors-headers==2.1.0
@@ -22,40 +17,32 @@ django-report-builder==4.0.3
 django-storages==1.6.5
 django-viewflow==1.2.0
 djangorestframework==3.7.7
-docker==4.2.1
-docker-compose==1.25.5
+docker==3.7.3
+docker-compose==1.21.2
+docker-pycreds==0.4.0
 dockerpty==0.4.1
 docopt==0.6.2
-docutils==0.15.2
+docutils==0.16
 et-xmlfile==1.0.1
-future==0.16.0
 gunicorn==19.7.1
 idna==2.7
-importlib-metadata==1.6.1
 jdcal==1.4.1
 jmespath==0.10.0
-jsonschema==3.2.0
-openpyxl==2.4.0
-paramiko==2.7.1
-pathspec==0.5.9
+jsonschema==2.6.0
+openpyxl==3.0.3
+pathspec==0.5.5
 Pillow==7.1.2
 psycopg2==2.8.5
 psycopg2-binary==2.8.5
-pycparser==2.20
-PyNaCl==1.4.0
-pyrsistent==0.16.0
-python-dateutil==2.1
-python-dotenv==0.13.0
+python-dateutil==2.8.1
 pytz==2020.1
-PyYAML==5.3.1
+PyYAML==3.13
 requests==2.20.1
-s3transfer==0.1.10
 selenium==3.10.0
 semantic-version==2.5.0
 six==1.11.0
 termcolor==1.1.0
-texttable==1.6.2
-urllib3==1.24.3
-wcwidth==0.1.9
+texttable==0.9.1
+urllib3==1.22
+wcwidth==0.2.4
 websocket-client==0.57.0
-zipp==3.1.0
