--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,3 +1,4 @@
 option_settings:
   aws:elasticbeanstalk:container:python:
-    WSGIPath: bonds/wsgi:application
+    option_name: WSGIPath
+    value: bonds/wsgi.py
