--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,4 +1,3 @@
 option_settings:
   aws:elasticbeanstalk:container:python:
-    option_name: WSGIPath
-    value: bonds/wsgi.py
+    WSGIPath: bonds/wsgi.py
