--- a/requirements_0423.txt
+++ b/requirements_0423.txt
@@ -11,8 +11,10 @@ django-report-builder==4.0.3
 django-storages==1.6.5
 django-viewflow==1.2.0
 djangorestframework==3.7.7
+docker==3.5.1
+docker-compose==1.21.2
 gunicorn==19.7.1
 Pillow
 psycopg2-binary
-requests
+requests==2.9.1
 selenium==3.10.0
