--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ pathspec==0.5.5
 Pillow==7.1.2
 psycopg2-binary==2.8.5
 python-dateutil==2.8.1
+python-dotenv==0.13.0
 pytz==2020.1
 PyYAML==3.13
 requests==2.18.4
