--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ jsonschema==2.6.0
 openpyxl==3.0.3
 pathspec==0.5.5
 Pillow==7.1.2
+psycopg2==2.8.5
 psycopg2-binary==2.8.5
 python-dateutil==2.8.1
 python-dotenv==0.13.0
