--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 awsebcli==3.14.6
 blessed==1.17.8
-botocore==1.12.39
+boto3==1.14.5
+botocore==1.17.5
 cached-property==1.5.1
 cement==2.8.2
 certifi==2020.4.5.2
@@ -22,7 +23,7 @@ docker-compose==1.21.2
 docker-pycreds==0.4.0
 dockerpty==0.4.1
 docopt==0.6.2
-docutils==0.16
+docutils==0.15.2
 et-xmlfile==1.0.1
 gunicorn==19.7.1
 idna==2.6
@@ -39,6 +40,7 @@ python-dotenv==0.13.0
 pytz==2020.1
 PyYAML==3.13
 requests==2.18.4
+s3transfer==0.3.3
 selenium==3.10.0
 semantic-version==2.5.0
 six==1.11.0
