--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,7 @@
-awsebcli==3.18.1
-bcrypt==3.1.7
-blessed==1.17.8
+awscli==1.18.82
 boto3==1.14.5
-botocore==1.15.49
-cached-property==1.5.1
-cement==2.8.2
-certifi==2020.4.5.2
-cffi==1.14.0
-chardet==3.0.4
+botocore==1.17.5
 colorama==0.4.3
-cryptography==2.9.2
 Django==1.11.17
 django-admin-list-filter-dropdown==1.0.3
 django-cors-headers==2.1.0
@@ -18,41 +10,25 @@ django-jet==1.0.7
 django-material==1.2.2
 django-pipeline==1.6.14
 django-report-builder==4.0.3
-django-storages==1.6.5
+django-storages==1.9.1
 django-viewflow==1.2.0
 djangorestframework==3.7.7
-docker==3.7.3
-docker-compose==1.25.5
-docker-pycreds==0.4.0
-dockerpty==0.4.1
-docopt==0.6.2
 docutils==0.15.2
 et-xmlfile==1.0.1
-future==0.16.0
 gunicorn==19.7.1
-idna==2.6
 jdcal==1.4.1
 jmespath==0.10.0
-jsonschema==2.6.0
 openpyxl==3.0.3
-paramiko==2.7.1
-pathspec==0.5.9
 Pillow==7.1.2
 psycopg2==2.8.5
 psycopg2-binary==2.8.5
-pycparser==2.20
-PyNaCl==1.4.0
-python-dateutil==2.8.0
+pyasn1==0.4.8
+python-dateutil==2.8.1
 python-dotenv==0.13.0
 pytz==2020.1
 PyYAML==5.3.1
-requests==2.20.1
+rsa==3.4.2
 s3transfer==0.3.3
 selenium==3.10.0
-semantic-version==2.5.0
-six==1.11.0
-termcolor==1.1.0
-texttable==0.9.1
-urllib3==1.24.3
-wcwidth==0.1.9
-websocket-client==0.57.0
+six==1.15.0
+urllib3==1.25.9
