--- a/requirements_0423.txt
+++ b/requirements_0423.txt
@@ -1,5 +1,3 @@
-awsebcli==3.14.6
-botocore==1.12.39
 Django==1.11.17
 django-admin-list-filter-dropdown
 django-cors-headers==2.1.0
@@ -8,7 +6,7 @@ django-jet==1.0.7
 django-material==1.2.2
 django-pipeline==1.6.14
 django-report-builder==4.0.3
-django-storages==1.6.5
+django-storages
 django-viewflow==1.2.0
 djangorestframework==3.7.7
 gunicorn==19.7.1
